adição de funções

--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,1 +1,10 @@
-// TODO
+.contentImage {
+  max-height: 400px;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+}
+
+.image {
+  width: 100%;
+}
